refactor: modernize
We are purposefully not using List.of in the line points since it does not accept null values.